<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Student Portal+</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_login">Shibboleth</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_timetable">Timetable</string>
    <string name="title_lecture_info">Class Schedule</string>
    <string name="title_lecture_cancel">Class Cancellations</string>
    <string name="title_notice">News &amp; Events</string>
    <string name="title_edit_attend_course_update">Edit</string>
    <string name="title_edit_attend_course_add">Add</string>
    <string name="title_preference_general">Settings</string>
    <string name="title_preference_notification_type">Notification Type</string>
    <string name="title_preference_similar_subject">Similar Subject</string>
    <string name="title_delete">消去</string>
    <string name="title_confirm">確認</string>
    <string name="title_filter_dialog">検索フィルタ</string>
    <string name="title_color_picker">色を選択</string>
    <string name="title_sync_failed">同期失敗</string>
    <string name="title_required_login">再ログインが必要です</string>
    <string name="title_inbox_style">%1$d件の%2$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name_attend_course">受講科目</string>
    <string name="name_lecture_information">授業関連連絡</string>
    <string name="name_lecture_cancellation">休講情報</string>
    <string name="name_notice">最新情報</string>
    <string name="name_timetable">%1$sの時間割</string>
    <string name="name_week_monday">月</string>
    <string name="name_week_tuesday">火</string>
    <string name="name_week_wednesday">水</string>
    <string name="name_week_thursday">木</string>
    <string name="name_week_friday">金</string>
    <string name="name_week_saturday">土</string>
    <string name="name_week_sunday">日</string>
    <string name="name_week_intensive">集中</string>
    <string name="name_week_unknown">-</string>
    <string name="name_subject">授業科目</string>
    <string name="name_instructor">担当教員</string>
    <string name="name_location">場所</string>
    <string name="name_category">分類</string>
    <string name="name_title">タイトル</string>
    <string name="name_detail">内容</string>
    <string name="name_link">リンク</string>
    <string name="name_lecture_information_detail">連絡事項</string>
    <string name="name_lecture_cancellation_detail">備考</string>
    <string name="name_day_of_week_and_period">曜日時限</string>
    <string name="name_semester_and_day_of_week_and_period">学期 曜日時限</string>
    <string name="name_grade_and_day_of_week_and_period">区分 曜日時限</string>
    <string name="name_cancel_date">休講年月日</string>
    <string name="name_display_order">表示順</string>
    <string name="name_created_date">掲載日</string>
    <string name="name_type">特徴</string>
    <string name="name_unread">未読</string>
    <string name="name_read">既読</string>
    <string name="name_favorite">お気に入り</string>
    <string name="name_period1_start_time">8:50</string>
    <string name="name_period2_start_time">10:30</string>
    <string name="name_period3_start_time">12:50</string>
    <string name="name_period4_start_time">14:30</string>
    <string name="name_period5_start_time">16:10</string>
    <string name="name_period6_start_time">17:50</string>
    <string name="name_period7_start_time">19:30</string>
    <string name="name_date_range_all">全期間</string>
    <string name="name_date_range_day">今日</string>
    <string name="name_date_range_week">今週</string>
    <string name="name_date_range_month">今月</string>
    <string name="name_date_range_year">今年</string>
    <string name="name_order_update_date">最終更新日</string>
    <string name="name_order_attend_course">受講科目優先</string>
    <string name="name_null">未入力</string>
    <string name="name_newly_channel">新着通知</string>
    <string name="name_app_channel">Student Portal+</string>
    <string name="name_notification_all">すべて</string>
    <string name="name_notification_important">重要・注意を含む</string>
    <string name="name_notification_attend">受講科目・類似科目</string>
    <string name="name_notification_not">通知しない</string>
    <string name="text_agree_to_terms">上記の利用規約に同意します</string>
    <string name="text_not_found_lecture_information">表示できる授業関連連絡はありません</string>
    <string name="text_not_found_lecture_cancellation">表示できる休講情報はありません</string>
    <string name="text_not_found_notice">表示できる最新情報はありません</string>
    <string name="text_attend_course_edit_note">正式な受講登録は大学のシステムを使用してください</string>
    <string name="text_discard_confirm">編集中の内容を破棄しますか？</string>
    <string name="text_delete_confirm">&lt;b>%1$s&lt;/b> を消去しますか？</string>
    <string name="text_exclude_from_attend_confirm">&lt;b>%1$s&lt;/b> を受講科目から除外しますか？</string>
    <string name="text_add_to_attend_course">受講科目に追加しました</string>
    <string name="text_exclude_from_attend_course">受講科目から除外しました</string>
    <string name="text_semester_day_of_week_period">%1$s %2$s %3$s %4$s</string>
    <string name="text_grade_day_of_week_period">%1$s %2$s %3$s</string>
    <string name="text_lecture_information_created_date">初回掲示日: %1$s</string>
    <string name="text_lecture_information_updated_date">\n最終更新日: %1$s</string>
    <string name="text_lecture_cancellation_created_date">掲示日: %1$s</string>
    <string name="text_notice_created_date">掲載日: %1$s</string>
    <string name="text_share_app">Student Portal+\nhttps://play.google.com/store/apps/details?id=jp.kentan.student_portal_plus</string>
    <string name="text_summary_inbox_style">他%1$d件</string>
    <string name="info_login_form">ユーザー名とパスワードを入力して下さい</string>
    <string name="error">エラー</string>
    <string name="error_unknown">不明なエラーです</string>
    <string name="error_sync_failed">同期に失敗しました。時間をおいて再試行して下さい</string>
    <string name="error_sync_cancelled">同期がキャンセルされました</string>
    <string name="error_field_empty">未入力です</string>
    <string name="error_invalid_username">無効なユーザー名です</string>
    <string name="error_invalid_password">無効なパスワード文字数です</string>
    <string name="error_invalid_credit">不正な単位数です</string>
    <string name="error_invalid_schedule_code">不正な時間割番号です</string>
    <string name="error_not_found">存在しないか, すでに消去されています</string>
    <string name="error_save_failed">保存に失敗しました</string>
    <string name="error_delete_failed">消去に失敗しました</string>
    <string name="error_update_failed">更新に失敗しました</string>
    <string name="error_gdocs_require_login">ログインが必要なためGoogle Docsで開けません</string>
    <string name="button_login">Login</string>
    <string name="button_shibboleth">シボレス認証</string>
    <string name="description_favorite">お気に入り</string>
    <string name="description_lock">ロック</string>
    <string name="description_attend">受講科目</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_subject">授業科目</string>
    <string name="hint_instructor">担当教員</string>
    <string name="hint_location">場所</string>
    <string name="hint_day_of_week">曜日</string>
    <string name="hint_period">時限</string>
    <string name="hint_category">分類</string>
    <string name="hint_credit">単位数</string>
    <string name="hint_schedule_code">時間割番号</string>
    <string name="hint_query_subject_instructor">科目・教員名で検索&#8230;</string>
    <string name="hint_query_title">タイトルで検索&#8230;</string>
    <string name="action_apply">適用</string>
    <string name="action_save">保存</string>
    <string name="action_delete">消去</string>
    <string name="action_discard">破棄</string>
    <string name="action_exclude">除外</string>
    <string name="action_add">追加</string>
    <string name="action_search">検索</string>
    <string name="action_close">閉じる</string>
    <string name="action_filter">絞り込み</string>
    <string name="action_switch_layout">レイアウト</string>
    <string name="action_cancel">キャンセル</string>
    <string name="action_retry">再試行</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_timetable">Timetable</string>
    <string name="menu_lecture_info">Class Schedule Changes</string>
    <string name="menu_lecture_cancel">Class Cancellations</string>
    <string name="menu_notice">News &amp; Events</string>
    <string name="menu_campus_map">Campus Map</string>
    <string name="menu_room_map">Room Map</string>
    <string name="menu_setting">Setting</string>
    <string name="url_terms">https://ken.kentan.jp/app/student_portal_plus/terms_and_privacy_policy.html</string>
    <string name="url_terms_local">file:///android_asset/terms_and_privacy_policy.html</string>
    <string name="url_gdocs">https://docs.google.com/gview?embedded=true&amp;url=%1$s</string>
    <string name="url_campus_map">https://www.kit.ac.jp/uni_index/campus-map/</string>
    <string name="url_room_map">https://www.cis.kit.ac.jp/~gakumuka/ead/files/gakumuka/map/roommap.pdf</string>
    <string name="text_today_timetable">%1$s曜日の時間割</string>
    <string name="suffix_more_item">（他%1$d件）</string>
    <string name="action_show_all_lecture_information">すべての授業関連連絡を表示</string>
    <string name="action_show_all_lecture_cancellation">すべての休講情報を表示</string>
    <string name="action_show_all_notice">すべての最新情報を表示</string>
    <string name="text_empty_lecture_information">現在、あなたへの授業関連連絡はありません.</string>
    <string name="text_empty_lecture_cancellation">現在、あなたへの休講情報はありません.</string>
    <string name="suffix_period">%1$d限</string>
    <string name="suffix_day_of_week">%1$s曜日</string>
    <string name="suffix_day_of_week_short">%1$s曜</string>
    <string name="text_day_of_week_and_period">%1$s %2$s</string>
    <string name="pref_category_shibboleth">シボレス</string>
    <string name="pref_title_login">再ログイン</string>
    <string name="pref_summary_login">ユーザー名とパスワードを更新します</string>
    <string name="pref_title_last_login_date">最終ログイン日時</string>
    <string name="pref_category_notification">新着通知</string>
    <string name="pref_title_sync">自動同期</string>
    <string name="pref_summary_sync">一定間隔で自動的に同期(フェッチ)します</string>
    <string name="pref_title_sync_interval">同期間隔</string>
    <string name="pref_summary_sync_interval">%1$sごと</string>
    <string name="pref_title_notification_type">通知の種類</string>
    <string name="pref_summary_notification_type">通知内容をカスタマイズします</string>
    <string name="pref_title_vibration">バイブレーション</string>
    <string name="pref_summary_vibration">通知が届いたら振動させる</string>
    <string name="pref_title_led">通知LED</string>
    <string name="pref_summary_led">通知が届いたらLEDを点滅させる</string>
    <string name="pref_title_notification_settings">通知設定</string>
    <string name="pref_category_portal">ポータルデータ</string>
    <string name="pref_title_similar_subject_threshold">類似科目の設定</string>
    <string name="pref_summary_similar_subject_threshold">類似科目名のしきい値を変更します</string>
    <string name="pref_title_similar_threshold">類似科目名のしきい値</string>
    <string name="pref_title_sample">サンプル</string>
    <string name="pref_title_pdf_gdocs">PDFをGoogle Docsで開く</string>
    <string name="pref_summary_pdf_gdocs">ダウンロードせずGoogle Docsで表示します</string>
    <string name="pref_title_detail_error">詳細なエラーメッセージを表示</string>
    <string name="pref_summary_detail_error">エラー発生時に原因を詳細に表示します</string>
    <string name="pref_category_about">概要</string>
    <string name="pref_title_version">バージョン</string>
    <string name="pref_title_share">友達にシェア</string>
    <string name="pref_summary_share">このアプリを友達に教える</string>
    <string name="pref_title_developer">開発元</string>
    <string name="pref_summary_developer">K² Studio.</string>
    <string name="pref_title_terms">利用規約・プライバシーポリシー</string>
    <string name="pref_summary_terms">利用規約およびプライバシーポリシーの詳細</string>
    <string name="pref_title_license">オープンソースライセンス</string>
    <string name="pref_summary_license">オープンソースソフトウェアに関するライセンスの詳細</string>
</resources>