<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="jp.kentan.studentportalplus.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_timetable"
        android:name="jp.kentan.studentportalplus.ui.timetable.TimetableFragment"
        android:label="@string/title_timetable"
        tools:layout="@layout/fragment_timetable" />

    <fragment
        android:id="@+id/navigation_lecture_informations"
        android:name="jp.kentan.studentportalplus.ui.lectures.information.LectureInformationsFragment"
        android:label="@string/title_lecture_info"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_lecture_cancellations"
        android:name="jp.kentan.studentportalplus.ui.lectures.cancellation.LectureCancellationsFragment"
        android:label="@string/title_lecture_cancel"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_notices"
        android:name="jp.kentan.studentportalplus.ui.notices.NoticesFragment"
        android:label="@string/title_notice"
        tools:layout="@layout/fragment_list" />

    <customTabs
        android:id="@+id/navigation_campus_map"
        app:url="@string/url_campus_map" />

    <customTabs
        android:id="@+id/navigation_room_map"
        app:url="@string/url_room_map" />
</navigation>
