<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="query"
            type="jp.kentan.studentportalplus.data.component.LectureQuery" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:clipChildren="false"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/order_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name_display_order"
                app:layout_constraintBottom_toBottomOf="@+id/order_spinner"
                app:layout_constraintEnd_toStartOf="@+id/order_spinner"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="0.35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/order_spinner" />

            <Spinner
                android:id="@+id/order_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:selectedItemPosition="@{query.order.ordinal}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="0.65"
                app:layout_constraintStart_toEndOf="@+id/order_header"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/type_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/name_type"
                android:textColor="@color/grey_600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_spinner" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:chipSpacingHorizontal="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type_header">

                <com.google.android.material.chip.Chip
                    android:id="@+id/unread_chip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_unread"
                    android:checked="@{query.unread}" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/read_chip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_read"
                    android:checked="@{query.read}" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/attend_chip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_attend_lecture"
                    android:checked="@{query.attend}" />

            </com.google.android.material.chip.ChipGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>